# UltimateTTT

./: BoardTypes.hpp  CMakeLists.txt  HowToPlay.txt  MarkerPositions.cpp  README.txt  WinConditions.hpp  board.cpp  board.hpp  board_design.txt  game.cpp  game.hpp  main.cpp  player.hpp
assets/: text.json  ui_text.json
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: AssetLoader.cpp  AssetLoader.hpp  BoardLayout.hpp  Game.cpp  Game.hpp  GameCoordinator.cpp  GameCoordinator.hpp  GamePlay.cpp  GamePlay.hpp  GameSetup.cpp  GameSetup.hpp  GameState.cpp  GameState.hpp  InputController.cpp  InputController.hpp  LoadAssets.cpp  LoadAssets.hpp  MarkerPositions.cpp  MarkerPositions.hpp  MoveProcessor.cpp  MoveProcessor.hpp  PlayerManager.cpp  PlayerManager.hpp  Renderer.cpp  Renderer.hpp  TextManager.cpp  TextManager.hpp  TurnManager.cpp  TurnManager.hpp  UserInterface.cpp  UserInterface.hpp  board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  player.hpp
tests/: TestingUltilities.cpp  TestingUtilities.cpp  TestingUtilities.hpp  test_AssetLoader.cpp  test_Board.cpp  test_Game.cpp  test_GameSetup.cpp  test_GameState.cpp  test_InputController.cpp  test_MarkerPositions.cpp  test_MoveProcessor.cpp  test_PlayerManager.cpp  test_TextManager.cpp  test_TurnManager.cpp  test_WinConditions.cpp
